--- a/app/index.html
+++ b/app/index.html
@@ -53,9 +53,9 @@
         <div class="row ">
             <div class="col-sm-12 col-lg-4">
                 <!-- <h1>Note editor</h1> -->
-                <form id="taskForm" class="card">
-                    <input class="textInput" type="text" id="taskName" placeholder="Title" autofocus>
-                    <textarea id="taskDescription" rows="3" placeholder="Note" autofocus></textarea>
+                <form id="noteForm" class="card">
+                    <input class="textInput" type="text" id="noteName" placeholder="Title" autofocus>
+                    <textarea id="noteDescription" rows="3" placeholder="Note" autofocus></textarea>
                     <button type="submit" class="btn btn-secondary" id="saveButton">
                         Save
                     </button>
@@ -64,22 +64,10 @@
 
             </div>
 
-            <!-- <div class="container text-center col">
-                <div class="album py-1 text-start">
-                    <div class="container text-center">
-
-                        <div class="row d-flex flex-wrap" id="taskList">
-                            <script src="ui/app.js"></script>
-                        </div>
-                    </div>
-                </div>
-
-            </div> -->
-
             <div class="container text-center col">
                 <div class="album py-1 text-start">
                     <div class="container text-center">
-                        <div class="row d-flex" id="taskList">
+                        <div class="row d-flex" id="notesList">
                             <script src="ui/app.js"></script>
                         </div>
                     </div>
