--- a/app/pages/Tasks.html
+++ b/app/pages/Tasks.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prodify</title>
-    <link rel="stylesheet" href="tasks.css">
+    <link rel="stylesheet" href="./tasks.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
@@ -51,22 +51,27 @@
             <div class="col-sm-12 col-lg-4">
                 <!-- <h1>Note editor</h1> -->
                 <form id="taskForm" class="card">
-                    <button type="submit" class="btn btn-secondary" id="saveButton">
+                    <input class="textInput" type="text" id="taskName" placeholder="Title" autofocus>
+                    <button type="submit" class="btn btn-secondary" id="saveTask">
                         Save
                     </button>
                 </form>
-
-
             </div>
-
 
             <div class="container text- center col">
                 <div class="album py-1 text-start">
                     <div class="container text-center">
 
                         <div class="row" id="taskList">
-                            <script src="ui/app.js"></script>
+                            <div class="task">
+                                <label for="vehicle1"> My task</label><br>
+                            </div>
+
                         </div>
+
+                        <!-- <div class="row" id="taskList">
+                            <script src="ui/taskManager.js"></script>
+                        </div> -->
                     </div>
                 </div>
 
