--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prodify</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/dark-mode.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
@@ -24,29 +25,37 @@
 </head>
 
 <body class="App">
-
     <div class="container">
         <header class="navbar navbar-expand-md navbar-dark d-flex flex-wrap  py-3 mb-4 border-bottom ">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <!-- <a href="" class="nav-link text-light end-0 me-3" onclick="changeMode()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"
+                    class="icon icon-tabler icon-tabler-moon">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M12 1.992a10 10 0 1 0 9.236 13.838c.341 -.82 -.476 -1.644 
+                    -1.298 -1.31a6.5 6.5 0 0 1 -6.864 -10.787l.077 -.08c.551 -.63 
+                    .113 -1.653 -.758 -1.653h-.266l-.068 -.006l-.06 -.002z" />
+                </svg>
+            </a> -->
 
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <h2>Prodify</h2>
             </a>
-            <!-- This is not an empty button, its used when the navbar collapses -->
+
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
                 <nav>
                     <ul class="navbar-nav nav-pills ">
                         <br>
                         <li class="nav-item"><a href="index.html" class="nav-link active">Notes</a></li>
                         <li class="nav-item"><a href="pages/Tasks.html" class="nav-link">Tasks</a></li>
-                        <!-- <li class="nav-item"><a href="pages/notes.html" class="nav-link">Notes</a></li> -->
-                        <!-- <li class="nav-item"><a href="setup.html" class="nav-link">Setup</a></li> -->
                     </ul>
                 </nav>
             </div>
+
         </header>
     </div>
     <div class="container text-center col">
@@ -54,8 +63,8 @@
             <div class="col-sm-12 col-lg-4">
                 <!-- <h1>Note editor</h1> -->
                 <form id="noteForm" class="card">
-                    <input class="textInput" type="text" id="noteName" placeholder="Title" autofocus>
-                    <textarea id="noteDescription" rows="3" placeholder="Note" autofocus></textarea>
+                    <input class="textInput" type="text" id="noteName" placeholder="Title">
+                    <textarea id="noteDescription" rows="3" placeholder="Note"></textarea>
                     <button type="submit" class="btn btn-secondary" id="saveButton">
                         Save
                     </button>
@@ -68,16 +77,12 @@
                 <div class="album py-1 text-start">
                     <div class="container text-center">
                         <div class="row d-flex" id="notesList">
-                            <script src="ui/app.js"></script>
+                            <script src="ui/notesManager.js"></script>
                         </div>
                     </div>
                 </div>
             </div>
-
-
         </div>
-
-
 </body>
 
 </html>
