--- a/app/index.html
+++ b/app/index.html
@@ -27,29 +27,16 @@
 <body class="App">
     <div class="container">
         <header class="navbar navbar-expand-md navbar-dark d-flex flex-wrap  py-3 mb-4 border-bottom ">
-            <!-- <a href="" class="nav-link text-light end-0 me-3" onclick="changeMode()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"
-                    class="icon icon-tabler icon-tabler-moon">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 1.992a10 10 0 1 0 9.236 13.838c.341 -.82 -.476 -1.644 
-                    -1.298 -1.31a6.5 6.5 0 0 1 -6.864 -10.787l.077 -.08c.551 -.63 
-                    .113 -1.653 -.758 -1.653h-.266l-.068 -.006l-.06 -.002z" />
-                </svg>
-            </a> -->
-
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <h2>Prodify</h2>
             </a>
-
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
                 <nav>
                     <ul class="navbar-nav nav-pills ">
-                        <br>
                         <li class="nav-item"><a href="index.html" class="nav-link active">Notes</a></li>
                         <li class="nav-item"><a href="pages/Tasks.html" class="nav-link">Tasks</a></li>
                     </ul>
@@ -72,8 +59,8 @@
 
 
             </div>
-
             <div class="container text-center col">
+                <h1>Notes</h1>
                 <div class="album py-1 text-start">
                     <div class="container text-center">
                         <div class="row d-flex" id="notesList">
