--- a/app/pages/Tasks.html
+++ b/app/pages/Tasks.html
@@ -24,13 +24,11 @@
 </head>
 
 <body class="App">
-
     <div class="container">
         <header class="navbar navbar-expand-md navbar-dark d-flex flex-wrap  py-3 mb-4 border-bottom ">
             <a class="navbar-brand d-flex align-items-center" href="../index.html">
                 <h2>Prodify</h2>
             </a>
-            <!-- This is not an empty button, its used when the navbar collapses -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +36,6 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
                 <nav>
                     <ul class="navbar-nav nav-pills ">
-                        <br>
                         <li class="nav-item"><a href="../index.html" class="nav-link ">Notes</a></li>
                         <li class="nav-item"><a href="../pages/Tasks.html" class="nav-link active">Tasks</a></li>
                     </ul>
@@ -56,7 +53,6 @@
                     </button>
                 </form>
             </div>
-
             <div class="container text-center col">
                 <div class="album py-1 text-start">
                     <div class="container text-center">
@@ -67,10 +63,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
-
+    </div>
 </body>
 
 </html>
