--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prodify</title>
-    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dark-mode.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -37,18 +36,17 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
                 <nav>
                     <ul class="navbar-nav nav-pills ">
-                        <li class="nav-item"><a href="index.html" class="nav-link active">Notes</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link active ">Notes</a></li>
                         <li class="nav-item"><a href="pages/Tasks.html" class="nav-link">Tasks</a></li>
+                        <li class="nav-item"><a href="pages/Projects.html" class="nav-link ">Projects</a></li>
                     </ul>
                 </nav>
             </div>
-
         </header>
     </div>
     <div class="container text-center col">
         <div class="row ">
             <div class="col-sm-12 col-lg-4">
-                <!-- <h1>Note editor</h1> -->
                 <form id="noteForm" class="card">
                     <input class="textInput" type="text" id="noteName" placeholder="Title">
                     <textarea id="noteDescription" rows="3" placeholder="Note"></textarea>
@@ -56,13 +54,11 @@
                         Save
                     </button>
                 </form>
-
-
             </div>
             <div class="container text-center col">
-                <h1>Notes</h1>
                 <div class="album py-1 text-start">
                     <div class="container text-center">
+                        <h1>Notes</h1>
                         <div class="row d-flex" id="notesList">
                             <script src="ui/notesManager.js"></script>
                         </div>
@@ -70,6 +66,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
