--- a/app/pages/Projects.html
+++ b/app/pages/Projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prodify</title>
-    <link rel="stylesheet" href="./tasks.css">
+    <link rel="stylesheet" href="./projects.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
@@ -37,8 +37,8 @@
                 <nav>
                     <ul class="navbar-nav nav-pills ">
                         <li class="nav-item"><a href="../index.html" class="nav-link ">Notes</a></li>
-                        <li class="nav-item"><a href="./Tasks.html" class="nav-link active">Tasks</a></li>
-                        <li class="nav-item"><a href="./Projects.html" class="nav-link ">Projects</a></li>
+                        <li class="nav-item"><a href="./Tasks.html" class="nav-link ">Tasks</a></li>
+                        <li class="nav-item"><a href="./Projects.html" class="nav-link active">Projects</a></li>
                     </ul>
                 </nav>
             </div>
@@ -47,30 +47,25 @@
     <div class="container text-center col">
         <div class="row ">
             <div class="col-sm-12 col-lg-4">
-                <form id="taskForm" class="card">
-                    <input class="textInput" type="text" id="taskName" placeholder="Title">
-                    <button type="submit" class="btn btn-secondary" id="saveTask">
-                        Save
+                <form id="projectForm" class="card">
+                    <input class="textInput" type="text" id="projectName" placeholder="Title">
+                    <button type="submit" class="btn btn-secondary" id="saveProject">
+                        New project
                     </button>
                 </form>
             </div>
-            <div class="container text-center col">
-                <div class="album py-1 text-start">
-                    <div class="container text-center">
-                        <h1>To-Do</h1>
-                        <div class="row d-flex" id="tasksList">
-                            <script src="../ui/taskManager.js"></script>
-                        </div>
-                    </div>
-                    <div class="container text-center col">
-                        <h1>Completed</h1>
-                        <div class="row d-flex" id="completedTasksList">
-                            <script src="../ui/taskManager.js"></script>
-                        </div>
-                    </div>
+        </div>
+
+        <div class="row ">
+            <div class="col-sm-12 col-lg-4">
+                <br>
+                <h1> Projects</h1>
+                <div class="row d-flex" id="projectsList">
+                    <script src="ui/projectsManager.js"></script>
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
