--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,8 @@
     <div class="container text-center col">
         <div class="row ">
             <div class="col-sm-12 col-lg-4">
+                <h1>New note</h1>
+
                 <form id="noteForm" class="card">
                     <input class="textInput" type="text" id="noteName" placeholder="Title">
                     <textarea id="noteDescription" rows="3" placeholder="Note"></textarea>
