--- a/app/pages/Tasks.html
+++ b/app/pages/Tasks.html
@@ -47,8 +47,9 @@
     <div class="container text-center col">
         <div class="row ">
             <div class="col-sm-12 col-lg-4">
+                <h1>New task</h1>
                 <form id="taskForm" class="card">
-                    <input class="textInput" type="text" id="taskName" placeholder="Title">
+                    <input class="textInput" type="text" id="taskName" placeholder="Task">
                     <button type="submit" class="btn btn-secondary" id="saveTask">
                         Save
                     </button>
